# bytes-buf

./: Cargo.toml
src/: lib.rs
src/buf/: buf_impl.rs  buf_mut.rs  chain.rs  take.rs
src/fmt/: debug.rs  hex.rs
